--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-email=devopstrainingblr@gmail.com
+#email=devopstrainingblr@gmail.com
 #always-auth=true
 #_auth=YWRtaW46cGFzc3cwcmQ=
-//registry.npmjs.org/:_auth=bWl0aHVudGVjaG5vbG9naWVzOmRldm9wcw==
+//registry.npmjs.org/:_auth=25244c11-5b77-3225-b827-46bfb6698262==
 allowRepublish=true
